--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
   kapt "android.arch.persistence.room:compiler:$roomVersion"
 
   testImplementation "junit:junit:$junitVersion"
+  testImplementation "org.mockito:mockito-inline:$mockitoVersion"
+  testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
 
   androidTestImplementation "com.android.support.test:runner:$runnerVersion"
   androidTestImplementation "com.android.support.test.espresso:espresso-core:$espressoVersion"
