--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,14 @@ ext {
   supportLibraryVersion = '27.1.1'
   constraintLayoutVersion = '1.1.2'
   guavaVersion = '18.0'
+  roomVersion = '1.1.1'
+
   junitVersion = '4.12'
   mockitoVersion = '2.10.0'
+  mockitoKotlinVersion = '2.0.0-RC1'
   hamcrestVersion = '1.3'
+
   runnerVersion = '1.0.2'
   rulesVersion = '1.0.2'
   espressoVersion = '3.0.2'
-  roomVersion = "1.1.1"
-
-
 }
