--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,41 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  flavorDimensions "default"
+
+  // If you need to add more flavors, consider using flavor dimensions.
+  productFlavors {
+//    mock {
+//      dimension "default"
+//      applicationIdSuffix = ".mock"
+//    }
+    prod {
+      dimension "default"
+    }
+  }
+
+  // Remove mockRelease as it's not needed.
+  android.variantFilter { variant ->
+    if (variant.buildType.name == 'release'
+        && variant.getFlavors().get(0).name == 'mock') {
+      variant.setIgnore(true)
+    }
+  }
+
+  // Always show the result of every unit test, even if it passes.
+  testOptions.unitTests.all {
+    testLogging {
+      events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+    }
+  }
 }
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "com.android.support:appcompat-v7:$supportLibraryVersion"
+  implementation "com.android.support:design:$supportLibraryVersion"
   implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
   implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
   implementation "android.arch.persistence.room:runtime:$roomVersion"
